| Bug #24521 | ndbd node crashes if try to create many datafiles for tablespace | ||
|---|---|---|---|
| Submitted: | 22 Nov 2006 21:52 | Modified: | 7 May 16:59 |
| Reporter: | Serge Kozlov | ||
| Status: | Closed | ||
| Category: | Server: ClusterDD | Severity: | S2 (Serious) |
| Version: | 5.1.14-bk | OS: | Linux (Linux FC4) |
| Assigned to: | Target Version: | ||
| Triage: | Triaged: D2 (Serious) / R6 (Needs Assessment) / E6 (Needs Assessment) | ||
[22 Nov 2006 21:52]
Serge Kozlov
[24 Jan 2007 6:33]
justin he
the patch for bug24521
Attachment: bug24521.patch (text/x-patch), 9.31 KiB.
[25 Jan 2007 17:30]
Jonas Oreland
Hi, Please do it as this instead. - Have ndbfs send back a FSOPENREF with new error code instead. /Jonas ps. please ask by mail if description was unclear ds.
[29 Mar 2007 5:06]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/23230 ChangeSet@1.2487, 2007-03-29 10:59:05+08:00, Justin.He@dev3-240.dev.cn.tlan +3 -0 Bug#24521, ndbd node crashes if try to create many datafiles for tablespace
[7 Apr 2007 9:01]
Bugs System
Pushed into 5.1.18-beta
[10 Apr 2007 13:17]
Jon Stephens
Thank you for your bug report. This issue has been committed to our source repository of
that product and will be incorporated into the next release.
If necessary, you can access the source repository and build the latest available version,
including the bug fix. More information about accessing the source trees is available at
http://dev.mysql.com/doc/en/installing-source.html
Documented bugfix in 5.1.18 changelog.
[26 Nov 2008 17:35]
Geert Vanderkelen
This isn't fixed. Adding lots of data files still segfaults the datanode using mysql-5.1.30-ndb-6.3.20. I can add like 241 datafiles, and then one data node segfaults. Attaching the logs.
[26 Nov 2008 17:36]
Geert Vanderkelen
Logs while adding lots of datafiles to a tablespace
Attachment: ndb_error_report_20081126172139.tar.bz2 (application/octet-stream, text), 71.15 KiB.
[13 Mar 10:05]
Jonas Oreland
decreasing prio based on (own) triage
[6 May 9:45]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/73457 2911 Jonas Oreland 2009-05-06 ndb - bug#24521 Don't try to free a file that was never created
[6 May 9:46]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/73458 2912 Jonas Oreland 2009-05-06 ndb - bug#24521 Don't try to free a file that was never created
[6 May 14:07]
Bugs System
Pushed into 5.1.32-ndb-6.3.25 (revid:jonas@mysql.com-20090506110937-wloyovra7v732nw6) (version source revid:jonas@mysql.com-20090506110937-wloyovra7v732nw6) (merge vers: 5.1.32-ndb-6.3.25) (pib:6)
[6 May 14:08]
Bugs System
Pushed into 5.1.32-ndb-7.0.6 (revid:jonas@mysql.com-20090506120323-js5j4twu5w71iy0a) (version source revid:jonas@mysql.com-20090506120323-js5j4twu5w71iy0a) (merge vers: 5.1.32-ndb-7.0.6) (pib:6)
[6 May 14:09]
Bugs System
Pushed into 5.1.32-ndb-6.2.18 (revid:jonas@mysql.com-20090506101635-2hm4lyqgtzhw8lmi) (version source revid:jonas@mysql.com-20090506074420-euxc02x4y8vxstlh) (merge vers: 5.1.32-ndb-6.2.18) (pib:6)
[7 May 16:59]
Jon Stephens
Documented new fix in the NDB-6.2.18, 6.3.25, and 7.0.6 changelogs. Closed.
