storage/ndb/src/kernel/blocks/ndbfs/Ndbfs.cpp
@@ -105,11 +105,11 @@ Ndbfs::execREAD_CONFIG_REQ(Signal* signal)
 
   theRequestPool = new Pool<Request>;
 
-  m_maxFiles = 40;
+  m_maxFiles = 0;
   ndb_mgm_get_int_parameter(p, CFG_DB_MAX_OPEN_FILES, &m_maxFiles);
   Uint32 noIdleFiles = 27;
   ndb_mgm_get_int_parameter(p, CFG_DB_INITIAL_OPEN_FILES, &noIdleFiles);
-  if (noIdleFiles > m_maxFiles)
+  if (noIdleFiles > m_maxFiles && m_maxFiles != 0)
     m_maxFiles = noIdleFiles;
   // Create idle AsyncFiles
   for (Uint32 i = 0; i < noIdleFiles; i++){
@@ -650,7 +650,7 @@ AsyncFile*
 Ndbfs::createAsyncFile(){
 
   // Check limit of open files
-  if (theFiles.size()+1 ==  m_maxFiles) {
+  if (m_maxFiles !=0 && theFiles.size()+1 ==  m_maxFiles) {
     // Print info about all open files
     for (unsigned i = 0; i < theFiles.size(); i++){
       AsyncFile* file = theFiles[i];
